// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstallBrowserExtensionAlert BITBUCKETSERVER (Chrome) 1`] = `
<InstallBrowserExtensionAlert
  codeHostIntegrationMessaging="browser-extension"
  externalURLs={
    Array [
      Object {
        "serviceKind": "BITBUCKETSERVER",
        "url": "",
      },
    ]
  }
  isChrome={true}
  onAlertDismissed={[Function]}
>
  <div
    className="alert alert-info m-2 d-flex justify-content-between flex-shrink-0"
    data-testid="install-browser-extension-alert"
  >
    <div
      className="d-flex align-items-center"
    >
      <p
        className="my-0 mr-3"
      >
        <a
          className="alert-link"
          href="https://chrome.google.com/webstore/detail/dgjhfomjieaadpoljlnidmbgkdffpack"
          rel="noopener noreferrer"
          target="_blank"
        >
          Install the Sourcegraph browser extension
        </a>
         
        to add code intelligence
         
        to 
        pull requests
         
        and file views
         
        on 
        Bitbucket Server
        .
      </p>
    </div>
    <button
      aria-label="Close alert"
      className="btn btn-icon test-close-alert"
      onClick={[Function]}
      type="button"
    >
      <Memo(CloseIcon)
        className="icon-inline"
      />
    </button>
  </div>
</InstallBrowserExtensionAlert>
`;

exports[`InstallBrowserExtensionAlert BITBUCKETSERVER (native integration) 1`] = `
<InstallBrowserExtensionAlert
  codeHostIntegrationMessaging="native-integration"
  externalURLs={
    Array [
      Object {
        "serviceKind": "BITBUCKETSERVER",
        "url": "",
      },
    ]
  }
  isChrome={false}
  onAlertDismissed={[Function]}
>
  <div
    className="alert alert-info m-2 d-flex justify-content-between flex-shrink-0"
    data-testid="install-browser-extension-alert"
  >
    <div
      className="d-flex align-items-center"
    >
      <p
        className="my-0 mr-3"
      >
        Sourcegraph's code intelligence will follow you to your code host. Your site admin set up the Sourcegraph native integration for 
        Bitbucket Server
        .
         
        <a
          className="alert-link"
          href="https://docs.sourcegraph.com/integration/browser_extension"
          rel="noopener"
          target="_blank"
        >
          Learn more
        </a>
         
        or
         
        <a
          className="alert-link"
          href=""
          rel="noopener"
          target="_blank"
        >
          try it out
        </a>
      </p>
    </div>
    <button
      aria-label="Close alert"
      className="btn btn-icon test-close-alert"
      onClick={[Function]}
      type="button"
    >
      <Memo(CloseIcon)
        className="icon-inline"
      />
    </button>
  </div>
</InstallBrowserExtensionAlert>
`;

exports[`InstallBrowserExtensionAlert BITBUCKETSERVER (non-Chrome) 1`] = `
<InstallBrowserExtensionAlert
  codeHostIntegrationMessaging="browser-extension"
  externalURLs={
    Array [
      Object {
        "serviceKind": "BITBUCKETSERVER",
        "url": "",
      },
    ]
  }
  isChrome={false}
  onAlertDismissed={[Function]}
>
  <div
    className="alert alert-info m-2 d-flex justify-content-between flex-shrink-0"
    data-testid="install-browser-extension-alert"
  >
    <div
      className="d-flex align-items-center"
    >
      <p
        className="my-0 mr-3"
      >
        Get code intelligence
         
        while browsing files and reviewing
         
        pull requests
         
        on 
        Bitbucket Server
        .
         
        <a
          className="alert-link"
          href="/help/integration/browser_extension"
          rel="noopener noreferrer"
          target="_blank"
        >
          Learn more about Sourcegraph Chrome and Firefox extensions
        </a>
      </p>
    </div>
    <button
      aria-label="Close alert"
      className="btn btn-icon test-close-alert"
      onClick={[Function]}
      type="button"
    >
      <Memo(CloseIcon)
        className="icon-inline"
      />
    </button>
  </div>
</InstallBrowserExtensionAlert>
`;

exports[`InstallBrowserExtensionAlert GITHUB (Chrome) 1`] = `
<InstallBrowserExtensionAlert
  codeHostIntegrationMessaging="browser-extension"
  externalURLs={
    Array [
      Object {
        "serviceKind": "GITHUB",
        "url": "",
      },
    ]
  }
  isChrome={true}
  onAlertDismissed={[Function]}
>
  <div
    className="alert alert-info m-2 d-flex justify-content-between flex-shrink-0"
    data-testid="install-browser-extension-alert"
  >
    <div
      className="d-flex align-items-center"
    >
      <p
        className="my-0 mr-3"
      >
        <a
          className="alert-link"
          href="https://chrome.google.com/webstore/detail/dgjhfomjieaadpoljlnidmbgkdffpack"
          rel="noopener noreferrer"
          target="_blank"
        >
          Install the Sourcegraph browser extension
        </a>
         
        to add code intelligence
         
        to 
        pull requests
         
        and file views
         
        on 
        GitHub
        .
      </p>
    </div>
    <button
      aria-label="Close alert"
      className="btn btn-icon test-close-alert"
      onClick={[Function]}
      type="button"
    >
      <Memo(CloseIcon)
        className="icon-inline"
      />
    </button>
  </div>
</InstallBrowserExtensionAlert>
`;

exports[`InstallBrowserExtensionAlert GITHUB (native integration) 1`] = `
<InstallBrowserExtensionAlert
  codeHostIntegrationMessaging="native-integration"
  externalURLs={
    Array [
      Object {
        "serviceKind": "GITHUB",
        "url": "",
      },
    ]
  }
  isChrome={false}
  onAlertDismissed={[Function]}
>
  <div
    className="alert alert-info m-2 d-flex justify-content-between flex-shrink-0"
    data-testid="install-browser-extension-alert"
  >
    <div
      className="d-flex align-items-center"
    >
      <p
        className="my-0 mr-3"
      >
        Sourcegraph's code intelligence will follow you to your code host. Your site admin set up the Sourcegraph native integration for 
        GitHub
        .
         
        <a
          className="alert-link"
          href="https://docs.sourcegraph.com/integration/browser_extension"
          rel="noopener"
          target="_blank"
        >
          Learn more
        </a>
         
        or
         
        <a
          className="alert-link"
          href=""
          rel="noopener"
          target="_blank"
        >
          try it out
        </a>
      </p>
    </div>
    <button
      aria-label="Close alert"
      className="btn btn-icon test-close-alert"
      onClick={[Function]}
      type="button"
    >
      <Memo(CloseIcon)
        className="icon-inline"
      />
    </button>
  </div>
</InstallBrowserExtensionAlert>
`;

exports[`InstallBrowserExtensionAlert GITHUB (non-Chrome) 1`] = `
<InstallBrowserExtensionAlert
  codeHostIntegrationMessaging="browser-extension"
  externalURLs={
    Array [
      Object {
        "serviceKind": "GITHUB",
        "url": "",
      },
    ]
  }
  isChrome={false}
  onAlertDismissed={[Function]}
>
  <div
    className="alert alert-info m-2 d-flex justify-content-between flex-shrink-0"
    data-testid="install-browser-extension-alert"
  >
    <div
      className="d-flex align-items-center"
    >
      <p
        className="my-0 mr-3"
      >
        Get code intelligence
         
        while browsing files and reviewing
         
        pull requests
         
        on 
        GitHub
        .
         
        <a
          className="alert-link"
          href="/help/integration/browser_extension"
          rel="noopener noreferrer"
          target="_blank"
        >
          Learn more about Sourcegraph Chrome and Firefox extensions
        </a>
      </p>
    </div>
    <button
      aria-label="Close alert"
      className="btn btn-icon test-close-alert"
      onClick={[Function]}
      type="button"
    >
      <Memo(CloseIcon)
        className="icon-inline"
      />
    </button>
  </div>
</InstallBrowserExtensionAlert>
`;

exports[`InstallBrowserExtensionAlert GITLAB (Chrome) 1`] = `
<InstallBrowserExtensionAlert
  codeHostIntegrationMessaging="browser-extension"
  externalURLs={
    Array [
      Object {
        "serviceKind": "GITLAB",
        "url": "",
      },
    ]
  }
  isChrome={true}
  onAlertDismissed={[Function]}
>
  <div
    className="alert alert-info m-2 d-flex justify-content-between flex-shrink-0"
    data-testid="install-browser-extension-alert"
  >
    <div
      className="d-flex align-items-center"
    >
      <p
        className="my-0 mr-3"
      >
        <a
          className="alert-link"
          href="https://chrome.google.com/webstore/detail/dgjhfomjieaadpoljlnidmbgkdffpack"
          rel="noopener noreferrer"
          target="_blank"
        >
          Install the Sourcegraph browser extension
        </a>
         
        to add code intelligence
         
        to 
        merge requests
         
        and file views
         
        on 
        GitLab
        .
      </p>
    </div>
    <button
      aria-label="Close alert"
      className="btn btn-icon test-close-alert"
      onClick={[Function]}
      type="button"
    >
      <Memo(CloseIcon)
        className="icon-inline"
      />
    </button>
  </div>
</InstallBrowserExtensionAlert>
`;

exports[`InstallBrowserExtensionAlert GITLAB (native integration) 1`] = `
<InstallBrowserExtensionAlert
  codeHostIntegrationMessaging="native-integration"
  externalURLs={
    Array [
      Object {
        "serviceKind": "GITLAB",
        "url": "",
      },
    ]
  }
  isChrome={false}
  onAlertDismissed={[Function]}
>
  <div
    className="alert alert-info m-2 d-flex justify-content-between flex-shrink-0"
    data-testid="install-browser-extension-alert"
  >
    <div
      className="d-flex align-items-center"
    >
      <p
        className="my-0 mr-3"
      >
        Sourcegraph's code intelligence will follow you to your code host. Your site admin set up the Sourcegraph native integration for 
        GitLab
        .
         
        <a
          className="alert-link"
          href="https://docs.sourcegraph.com/integration/browser_extension"
          rel="noopener"
          target="_blank"
        >
          Learn more
        </a>
         
        or
         
        <a
          className="alert-link"
          href=""
          rel="noopener"
          target="_blank"
        >
          try it out
        </a>
      </p>
    </div>
    <button
      aria-label="Close alert"
      className="btn btn-icon test-close-alert"
      onClick={[Function]}
      type="button"
    >
      <Memo(CloseIcon)
        className="icon-inline"
      />
    </button>
  </div>
</InstallBrowserExtensionAlert>
`;

exports[`InstallBrowserExtensionAlert GITLAB (non-Chrome) 1`] = `
<InstallBrowserExtensionAlert
  codeHostIntegrationMessaging="browser-extension"
  externalURLs={
    Array [
      Object {
        "serviceKind": "GITLAB",
        "url": "",
      },
    ]
  }
  isChrome={false}
  onAlertDismissed={[Function]}
>
  <div
    className="alert alert-info m-2 d-flex justify-content-between flex-shrink-0"
    data-testid="install-browser-extension-alert"
  >
    <div
      className="d-flex align-items-center"
    >
      <p
        className="my-0 mr-3"
      >
        Get code intelligence
         
        while browsing files and reviewing
         
        merge requests
         
        on 
        GitLab
        .
         
        <a
          className="alert-link"
          href="/help/integration/browser_extension"
          rel="noopener noreferrer"
          target="_blank"
        >
          Learn more about Sourcegraph Chrome and Firefox extensions
        </a>
      </p>
    </div>
    <button
      aria-label="Close alert"
      className="btn btn-icon test-close-alert"
      onClick={[Function]}
      type="button"
    >
      <Memo(CloseIcon)
        className="icon-inline"
      />
    </button>
  </div>
</InstallBrowserExtensionAlert>
`;

exports[`InstallBrowserExtensionAlert PHABRICATOR (Chrome) 1`] = `
<InstallBrowserExtensionAlert
  codeHostIntegrationMessaging="browser-extension"
  externalURLs={
    Array [
      Object {
        "serviceKind": "PHABRICATOR",
        "url": "",
      },
    ]
  }
  isChrome={true}
  onAlertDismissed={[Function]}
>
  <div
    className="alert alert-info m-2 d-flex justify-content-between flex-shrink-0"
    data-testid="install-browser-extension-alert"
  >
    <div
      className="d-flex align-items-center"
    >
      <p
        className="my-0 mr-3"
      >
        <a
          className="alert-link"
          href="https://chrome.google.com/webstore/detail/dgjhfomjieaadpoljlnidmbgkdffpack"
          rel="noopener noreferrer"
          target="_blank"
        >
          Install the Sourcegraph browser extension
        </a>
         
        to add code intelligence
         
        while browsing and reviewing code
         
        on 
        Phabricator
        .
      </p>
    </div>
    <button
      aria-label="Close alert"
      className="btn btn-icon test-close-alert"
      onClick={[Function]}
      type="button"
    >
      <Memo(CloseIcon)
        className="icon-inline"
      />
    </button>
  </div>
</InstallBrowserExtensionAlert>
`;

exports[`InstallBrowserExtensionAlert PHABRICATOR (native integration) 1`] = `
<InstallBrowserExtensionAlert
  codeHostIntegrationMessaging="native-integration"
  externalURLs={
    Array [
      Object {
        "serviceKind": "PHABRICATOR",
        "url": "",
      },
    ]
  }
  isChrome={false}
  onAlertDismissed={[Function]}
>
  <div
    className="alert alert-info m-2 d-flex justify-content-between flex-shrink-0"
    data-testid="install-browser-extension-alert"
  >
    <div
      className="d-flex align-items-center"
    >
      <p
        className="my-0 mr-3"
      >
        Sourcegraph's code intelligence will follow you to your code host. Your site admin set up the Sourcegraph native integration for 
        Phabricator
        .
         
        <a
          className="alert-link"
          href="https://docs.sourcegraph.com/integration/browser_extension"
          rel="noopener"
          target="_blank"
        >
          Learn more
        </a>
         
        or
         
        <a
          className="alert-link"
          href=""
          rel="noopener"
          target="_blank"
        >
          try it out
        </a>
      </p>
    </div>
    <button
      aria-label="Close alert"
      className="btn btn-icon test-close-alert"
      onClick={[Function]}
      type="button"
    >
      <Memo(CloseIcon)
        className="icon-inline"
      />
    </button>
  </div>
</InstallBrowserExtensionAlert>
`;

exports[`InstallBrowserExtensionAlert PHABRICATOR (non-Chrome) 1`] = `
<InstallBrowserExtensionAlert
  codeHostIntegrationMessaging="browser-extension"
  externalURLs={
    Array [
      Object {
        "serviceKind": "PHABRICATOR",
        "url": "",
      },
    ]
  }
  isChrome={false}
  onAlertDismissed={[Function]}
>
  <div
    className="alert alert-info m-2 d-flex justify-content-between flex-shrink-0"
    data-testid="install-browser-extension-alert"
  >
    <div
      className="d-flex align-items-center"
    >
      <p
        className="my-0 mr-3"
      >
        Get code intelligence
         
        while browsing and reviewing code
         
        on 
        Phabricator
        .
         
        <a
          className="alert-link"
          href="/help/integration/browser_extension"
          rel="noopener noreferrer"
          target="_blank"
        >
          Learn more about Sourcegraph Chrome and Firefox extensions
        </a>
      </p>
    </div>
    <button
      aria-label="Close alert"
      className="btn btn-icon test-close-alert"
      onClick={[Function]}
      type="button"
    >
      <Memo(CloseIcon)
        className="icon-inline"
      />
    </button>
  </div>
</InstallBrowserExtensionAlert>
`;

exports[`InstallBrowserExtensionAlert none (Chrome) 1`] = `
<InstallBrowserExtensionAlert
  codeHostIntegrationMessaging="browser-extension"
  externalURLs={Array []}
  isChrome={true}
  onAlertDismissed={[Function]}
/>
`;

exports[`InstallBrowserExtensionAlert none (native integration) 1`] = `
<InstallBrowserExtensionAlert
  codeHostIntegrationMessaging="native-integration"
  externalURLs={Array []}
  isChrome={false}
  onAlertDismissed={[Function]}
/>
`;

exports[`InstallBrowserExtensionAlert none (non-Chrome) 1`] = `
<InstallBrowserExtensionAlert
  codeHostIntegrationMessaging="browser-extension"
  externalURLs={Array []}
  isChrome={false}
  onAlertDismissed={[Function]}
/>
`;
